src/objects/TrialPatientXML__c.object
<CustomObject>
    <fields>
        <fullName>Arm__c</fullName>
        <label>Arm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Patient_XML__c</fullName>
        <formula>&apos;&amp;lt;patient patient_id=&quot;&apos;+ TrialPatientId__r.Subject_Id__c +&apos;&quot; arm=&quot;&apos;+Arm__c+&apos;&quot; start_time=&quot;&apos;+  TEXT(Start_Time__c) +&apos;&quot;&amp;gt;&apos; +
&apos;&amp;lt;patient_covariate name=&quot;HR&quot; Value=&quot;&apos;+IF(HR__c,&apos;1&apos;,&apos;0&apos;)+&apos;&quot;/&amp;gt;&apos; +
&apos;&amp;lt;patient_covariate name=&quot;HER2&quot; Value=&quot;&apos;+IF(HER2__c,&apos;1&apos;,&apos;0&apos;)+&apos;&quot;/&amp;gt;&apos; +
&apos;&amp;lt;patient_covariate name=&quot;MP&quot; Value=&quot;&apos;+IF(MP__c,&apos;1&apos;,&apos;0&apos;)+&apos;&quot;/&amp;gt;&apos; +
&apos;&amp;lt;patient_outcome name=&quot;pCR&quot; type=&quot;double&quot; time=&quot;&apos;+TEXT(pCR_Time__c)+&apos;&quot; value=&quot;&apos;+TEXT(pCR_Value__c)+&apos;&quot;/&amp;gt;&apos; +
&apos;&amp;lt;patient_outcome name=&quot;MRI1&quot; type=&quot;double&quot; time=&quot;&apos;+TEXT(MRI1_Time__c)+&apos;&quot; value=&quot;&apos;+TEXT(MRI1_Value__c)+&apos;&quot;/&amp;gt; &apos; +
&apos;&amp;lt;patient_outcome name=&quot;MRI2&quot; type=&quot;double&quot; time=&quot;&apos;+TEXT(MRI2_Time__c)+&apos;&quot; value=&quot;&apos;+TEXT(MRI2_Value__c)+&apos;&quot;/&amp;gt;&apos; +
&apos;&amp;lt;patient_outcome name=&quot;MRI3&quot; type=&quot;double&quot; time=&quot;&apos;+TEXT(MRI3_Time__c)+&apos;&quot; value=&quot;&apos;+TEXT(MRI3_Value__c)+&apos;&quot;/&amp;gt;&apos; +
&apos;&amp;lt;/patient&amp;gt;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Patient XML</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HER2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HER2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRI1_Time__c</fullName>
        <defaultValue>(TODAY() - DATE(1950,1,1)) + 2</defaultValue>
        <label>MRI1 Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRI1_Value__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>MRI1 Value</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRI2_Time__c</fullName>
        <defaultValue>(TODAY() - DATE(1950,1,1)) + 2</defaultValue>
        <label>MRI2 Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRI2_Value__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>MRI2 Value</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRI3_Time__c</fullName>
        <defaultValue>(TODAY() - DATE(1950,1,1)) + 2</defaultValue>
        <label>MRI3 Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRI3_Value__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>MRI3 Value</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>(TODAY() - DATE(1950,1,1))</defaultValue>
        <label>Start Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject_Id__c</fullName>
        <formula>TrialPatientId__r.Subject_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatientId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Patient ID</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>TrialPatientXMLs</relationshipLabel>
        <relationshipName>TrialPatientXMLs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pCR_Time__c</fullName>
        <defaultValue>(TODAY() - DATE(1950,1,1)) + 2</defaultValue>
        <label>pCR Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pCR_Value__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>pCR Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TrialPatientXML</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject_Id__c</columns>
        <columns>Start_Time__c</columns>
        <columns>HER2__c</columns>
        <columns>HR__c</columns>
        <columns>MP__c</columns>
        <columns>MRI1_Time__c</columns>
        <columns>MRI1_Value__c</columns>
        <columns>MRI2_Time__c</columns>
        <columns>MRI2_Value__c</columns>
        <columns>MRI3_Time__c</columns>
        <columns>MRI3_Value__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrialPatientXMLs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>